muzbahi ideas + galahar changes

--- a/localisation/TD_01_flavour_muzbah_l_english.yml
+++ b/localisation/TD_01_flavour_muzbah_l_english.yml
@@ -8,3 +8,21 @@
  DALBALAT: "Dalbalat"
  RACHAT: "Rachat"
  BALAT: "Balat"
+
+ muzbah_group_ideas: "Muzbahi Minor Ideas"
+ muzbah_group_ideas_bonus: "Muzbahi Minor Ambition"
+ muzbah_group_ideas_start: "Muzbahi Minor Traditions"
+ muzbah_root_of_all_that_is_holy: "Root of All That is Holy"
+ muzbah_root_of_all_that_is_holy_desc: "Even in the days of our paganism, many prayed to the great god of Ilum. Then, with the revelations that Yusilah experienced at the peak of Galahar mountain, the cult of Ilum as a single and indivisible god spread like a wildfire across the lands, soon after spreading beyond Muzbah. We must ensure that the glory, holiness and light of Ilum reaches farthest parts of the Earth."
+ muzbah_asiran_tax: "Asiran Tax"
+ muzbah_asiran_tax_desc: "The tax was first proposed by the prophet Uzziel in order to end the greediness of merchants of Kotorat by forcing them to spend the tenth of their income on the church and the state. While many cities and settlements were reluctant to accept it at first, with the inclusion of Uzzielian scripts into the greater canon, the (partially) voluntary tax has been paid by every ilumist."
+ muzbah_explorers_of_the_maqitan: "Explorers of the Alkalen"
+ muzbah_explorers_of_the_maqitan_desc: "Long before the days of prophets, our people were the first to explore the wide world, establishing trade outposts in distant places such as Metytranw or Visparaya. While many of those old settlements have been lost to sands of time and western heretics, our colonies in the east are still important cities known throughout the Maqitan."
+ muzbah_books_of_yusilah: "Books of Yusilah"
+ muzbah_books_of_yusilah_desc: "When Yusilah received his revelations, his followers quickly began to write down everything he had to say into a collection of text, later to be known as Books of Yusilah. Later these books became the foundation of most laws, regulating the most fundamental of statehood like legitimization of power, punishment for crimes and some of the religious rituals."
+ muzbah_scholastic_traditions: "Scholastic Tradition"
+ muzbah_scholastic_traditions_desc: "Since the days of Yusilah people have been studying these new revelations, writing articles and new texts, trying to interpret the sacred in the best way they can. This led to a formation of a new social class, the Debari, focused solely on intelectual and artistic work, often being more respected than a typical artisan. Many articles have been written on Ilumist theology and many of the prophets have been Debari themselves, which gave them a broadened view of the faith."
+ muzbah_maqitan_crossroad: "Maqitan Crossroad"
+ muzbah_maqitan_crossroad_desc: "The Maqitan Sea is where many different inland roads blend together into an intricate web of trade routes and political intrigues. The lands of Ilum sit right where the western, yermic and visparayan groups interconnect. We can purchase Frankrani incense cheap and sell it for a fortune to Eneratians, or sell Gisian and Camarian grain to Lamedinians."
+ muzbah_saviors_of_mesutia: "Saviors of Mesutia"
+ muzbah_saviors_of_mesutia_desc: "The time of salvation has finally come. Eastern Sahila has been ruled by corrupted religious leaders, encouraging pagan polytheistic worship of devils. Their tyranny will soon end by the brave army of Ilum, marching as far south as it is needed.Their golden bulls and monuments will be melted into coins, to fund further campaigns against any heathens that oppose us."
