--- a/localisation/TD_great_projects_l_english.yml
+++ b/localisation/TD_great_projects_l_english.yml
@@ -62,8 +62,8 @@
  temple_of_the_sun_god: "The Great Abadag"
  temple_of_the_sun_god_desc: "This temple was created to serve Anoxwardan, but since Eopedian domination it has been dedicated to Ilum, the one true god."
 
- grand_temple_of_ilum: "City of Galahar"
- grand_temple_of_ilum_desc: "This ancient Muzbahi capital is the home of one of the most important ilumist and yaltazim prophets - Yusilah."
+ grand_temple_of_ilum: "Mount Galahar"
+ grand_temple_of_ilum_desc: "This ancient Muzbahi capital sits near the site of where Yusilah, the most important Ilumist prophet, has received great revelations."
 
  sointuva_burial_site: "Saivomearkka Burial Site"
  sointuva_burial_site_desc: "The most well preserved burial site of Sointuva folklore where many ancient rulers and religious figures are said to be sleeping."
