--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -3827,7 +3827,7 @@
  PROV3826: "3826"
  PROV3827: "3827"
  PROV3828: "3828"
- PROV3829: "3829"
+ PROV3829: "Ahirushima"
  PROV3830: "3830"
  PROV3831: "3831"
  PROV3832: "3832"
