--- a/localisation/TD_religion_l_english.yml
+++ b/localisation/TD_religion_l_english.yml
@@ -283,7 +283,7 @@
  merhaan: "Merhaan"
 
  tanagan: "Tanagan"
- tanagan_religion_desc: "This sect believes that Merhaan didn't stop people from conquering weaker opponents meaning that it favours that lifestyle. All spiritual and secular powers are rested in strongest individual that should strive to become stronger and stronger."
+ tanagan_religion_desc: "This sect believes that Merhaan did not stop people from conquering weaker opponents, meaning that it favours that lifestyle. All spiritual and secular powers are rested in the strongest individual that should strive to become stronger and stronger."
  tanagan_rebels_demand_desc: "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
  tanagan_rebels_title: "Religious"
  tanagan_rebels_desc: "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
@@ -291,7 +291,7 @@
  tanagan_rebels_demand: "Convert $COUNTRYNAME$"
 
  orundes: "Orundes"
- orundes_religion_desc: "Followers of Orunders believe that people should grow as better people just like trees, technological progress is revered as one of the gifts from Merhaan to allow people to grow just like it."
+ orundes_religion_desc: "Followers of Orundes believe that people should grow as better people just like trees, technological progress is revered as one of the gifts from Merhaan to allow people to grow just like it."
  orundes_rebels_demand_desc: "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
  orundes_rebels_title: "Religious"
  orundes_rebels_desc: "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
@@ -299,7 +299,7 @@
  orundes_rebels_demand: "Convert $COUNTRYNAME$"
 
  navch: "Navch"
- navch_religion_desc: "Navch is very grounded in life cycle of beings, Merhaan and other trees lose their leaves just to replace them with new ones. With the idea that new replace old a system where old wise people teach and lead young towards true enlightenment."
+ navch_religion_desc: "Navch is very grounded in the life cycle of beings, Merhaan and other trees lose their leaves just to replace them with new ones. With the idea that new replaces the old, a system where old wise people teach and lead young towards true enlightenment."
  navch_rebels_demand_desc: "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
  navch_rebels_title: "Religious"
  navch_rebels_desc: "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
@@ -307,7 +307,7 @@
  navch_rebels_demand: "Convert $COUNTRYNAME$"
 
  khondii: "Khondii"
- khondii_religion_desc: "Creation of Humanity by Merhaan is one of greatest miracles that happened, we humans have ability to replicate it by forming families and taking care of them. Keeping good relations with everybody close is one of the most important virtues."
+ khondii_religion_desc: "The creation of Humanity by Merhaan is one of the greatest miracles that happened, where humans have ability to replicate it by raising families and taking care of them. Keeping good relations with everybody close is one of the most important virtues."
  khondii_rebels_demand_desc: "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
  khondii_rebels_title: "Religious"
  khondii_rebels_desc: "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
@@ -323,7 +323,7 @@
  salbar_rebels_demand: "Convert $COUNTRYNAME$"
 
  ovogsteg: "Ovogsteg"
- ovogsteg_religion_desc: "Division of Merhaan faiths prevented us from reaching truth behind spiritual meaning of the world but also stopped us from forming of a centralised religious structure. Ovogsteg is a believe that everybody has some part of the truth and only by accepting different beliefs we will be able to progress. Non-Merhan faiths are being treated as very distant cousins that should be bringed back into truth."
+ ovogsteg_religion_desc: "Division of Merhaan faiths prevented us from reaching truth behind spiritual meaning of the world but also stopped us from forming of a centralised religious structure. Ovogsteg is a belief that everybody has some part of the truth and only by accepting different beliefs we will be able to progress. Non-Merhan faiths are treated as very distant cousins that should be brought back into truth."
  ovogsteg_rebels_demand_desc: "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
  ovogsteg_rebels_title: "Religious"
  ovogsteg_rebels_desc: "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
