--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -2755,7 +2755,7 @@
  PROV2754: "2754"
  PROV2755: "2755"
  PROV2756: "2756"
- PROV2757: "2757"
+ PROV2757: "Northern Okukaigan Sea"
  PROV2758: "2758"
  PROV2759: "2759"
  PROV2760: "2760"
@@ -2774,7 +2774,7 @@
  PROV2773: "2773"
  PROV2774: "2774"
  PROV2775: "2775"
- PROV2776: "Northern Okukaigan Sea"
+ PROV2776: "Okukaigan Sea"
  PROV2777: "2777"
  PROV2778: "2778"
  PROV2779: "2779"
@@ -2785,21 +2785,21 @@
  PROV2784: "2784"
  PROV2785: "Gulf of Kyosan"
  PROV2786: "2786"
- PROV2787: "2787"
+ PROV2787: "Southern Nankai Sea"
  PROV2788: "2788"
- PROV2789: "2789"
- PROV2790: "2790"
+ PROV2789: "Northern Nankai Sea"
+ PROV2790: "Oamai Sea"
  PROV2791: "2791"
  PROV2792: "Tarwemeer"
- PROV2793: "Azumagan Bay"
- PROV2794: "2794"
- PROV2795: "2795"
+ PROV2793: "Azumagan Coast"
+ PROV2794: "Toiumi"
+ PROV2795: "Tsoyokan Bay"
  PROV2796: "2796"
  PROV2797: "2797"
  PROV2798: "2798"
  PROV2799: "2799"
  PROV2800: "2800"
- PROV2801: "2801"
+ PROV2801: "Kitasarian Sea"
  PROV2802: "2802"
  PROV2803: "2803"
  PROV2804: "2804"
@@ -2808,7 +2808,7 @@
  PROV2807: "2807"
  PROV2808: "2808"
  PROV2809: "2809"
- PROV2810: "2810"
+ PROV2810: "Sea of Shirosho"
  PROV2811: "2811"
  PROV2812: "Duchtepana"
  PROV2813: "2813"
@@ -3795,37 +3795,37 @@
  PROV3794: "Abugrehat"
  PROV3795: "Maktan"
  PROV3796: "3796"
- PROV3797: "3797"
- PROV3798: "3798"
+ PROV3797: "Sakihama"
+ PROV3798: "Maguroshima"
  PROV3799: "3799"
- PROV3800: "3800"
- PROV3801: "3801"
- PROV3802: "3802"
- PROV3803: "3803"
- PROV3804: "3804"
- PROV3805: "3805"
+ PROV3800: "Teibokusan"
+ PROV3801: "Soshima"
+ PROV3802: "Kitashi"
+ PROV3803: "Kuroiwan"
+ PROV3804: "Sakada"
+ PROV3805: "305"
  PROV3806: "3806"
  PROV3807: "3807"
- PROV3808: "3808"
- PROV3809: "3809"
- PROV3810: "3810"
- PROV3811: "3811"
- PROV3812: "3812"
- PROV3813: "3813"
+ PROV3808: "Oisyoto"
+ PROV3809: "Akadoya"
+ PROV3810: "Giheiya"
+ PROV3811: "Takaishi"
+ PROV3812: "Tetsushi"
+ PROV3813: "Miesyoto"
  PROV3814: "3814"
  PROV3815: "3815"
- PROV3816: "3816"
- PROV3817: "3817"
+ PROV3816: "Koshima"
+ PROV3817: "Kakuishi"
  PROV3818: "3818"
- PROV3819: "3819"
- PROV3820: "3820"
- PROV3821: "3821"
- PROV3822: "3822"
+ PROV3819: "Shikayko"
+ PROV3820: "Kyoshin"
+ PROV3821: "Kiirokawa"
+ PROV3822: "Yokojima"
  PROV3823: "3823"
- PROV3824: "3824"
- PROV3825: "3825"
- PROV3826: "3826"
- PROV3827: "3827"
+ PROV3824: "Shinyoko"
+ PROV3825: "Komori"
+ PROV3826: "Kurojima"
+ PROV3827: "Oyama"
  PROV3828: "3828"
  PROV3829: "Ahirushima"
  PROV3830: "3830"
