--- a/localisation/TD_ages_l_english.yml
+++ b/localisation/TD_ages_l_english.yml
@@ -3,7 +3,7 @@
  age_of_discovery: "Age of Innovations"
  age_of_discovery_desc: "Turmoil in Kakigia and Mysentria echoes throughout the world. With piracy and banditry at all time high a need to find new trade routes arises. Innovations spreads quickly in many ways and forms - from social philosophy to warfare."
  obj_many_subjects: "Many Subjects"
- obj_many_subjects_desc: "Have at least 4 subjects or be the Emperor of the Saelian Empire"
+ obj_many_subjects_desc: "Have at least 4 subjects or be the Sigilian or Eneratian Emperor"
  obj_ahead_tech: "Innovative Nation"
  obj_ahead_tech_tt: "Be Ahead in Technology"
  obj_ahead_tech_desc: "Be Ahead of time in any technology."
