--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -409,6 +409,7 @@
  east_hengtuan_group: "Tsinhoi"
  beidao: "Beidao"
  huangche: "Huangche"
+ huungtseuk: "Huungtseuk"
  tsekung: "Tsekung"
  luetan: "Luetan"
  daimin: "Daimin"
