--- a/localisation/TD_01_flavour_okukaiga_l_english.yml
+++ b/localisation/TD_01_flavour_okukaiga_l_english.yml
@@ -3,3 +3,21 @@
  domei_reform_desc: "Long time ago, due to the growing outside threats, the cities of Okukaiga formed into tight alliances, creating a groundwork for a republican system of provinces."
  DOMEI: "Domei"
  NUASEN: "Nuasen"
+
+ aoishiman_ideas: "Aoishiman Ideas"
+ aoishiman_ideas_bonus: "Aoishiman Ambition"
+ aoishiman_ideas_start: "Aoishiman Traditions"
+ aoishima_the_founding_federation: "The Founding Federation"
+ aoishima_the_founding_federation_desc: "At the height of Heisen Empire, many cities of Okukaigan archipelago based on the island of Aoishima greatly feared of the incoming invasion. This led to the many western lords to gather in a Kyosan for one hundred days and one hundred nights, which ultimately led to the proclamation of Aoishima Domei. While some were reluctant to give away their power as a concession to unified federation, after many years the republican system settled in place."
+ aoishima_tsinhoi_influences: "Tsinhoi Influences"
+ aoishima_tsinhoi_influences_desc: "Merchants travelling between Okukaiga and Tsinhoi often not only bring goods from the west, but also new ideas. Many parts of our culture are influenced by Hengtuan people, like art, lacquerware, architecture and religious practices - even the sacred Domei system itself is partially inspired by the provincial system of Beidao people."
+ aoishima_private_fleets: "Private Fleets"
+ aoishima_private_fleets_desc: "Only some things remained in personal ownership of various Aoishiman lords after years the unification. Agreed on during the great meeting in Kyosan and later solidified in the Kaigunuyoku, every landowner had the right to posess any amount of armed warships on the condition that during a call to war they will contribute to the great federal fleet."
+ aoishima_valley_farming: "Valley Farming"
+ aoishima_valley_farming_desc: "Hilly nature of Okukaigan islands makes it almost impossible to maintain large-scale grain production. This caused majority of our land food supply to come from rice paddies located around various river valleys. This concentration of production led to the need of increased effectiveness and good work ethic in order to maximize the output."
+ aoishima_hinoo: "Hinoou"
+ aoishima_hinoo_desc: "The fiery lord is the name of a partially active volcano dominating over the Gizasanti range. The legends tell of the time that Hinoou descended from heavens to help the people work the previously barren soils. The ash he created settled across the entire island, providing fertility to this very day. While the legend might only be partially true, the high quality of our soils is unquestionable."
+ aoishima_minamichi_silk: "Minamichi Silk"
+ aoishima_minamichi_silk_desc: "Minamichhi is often renowned for being our windows to the west, as this is where the richest merchants and sailors have lived for generations. Their wealth not only brought them financial stability, but also allowed them to purchase incredibly luxurious goods. This caused Minamichi to develop a large and very competitive class of artisans, which produce silk clothes and tapestry of the highest quality not only in Okukaiga, but also Tsinhoi."
+ aoishima_explore_the_eoduunso: "Explore the Eoduunso"
+ aoishima_explore_the_eoduunso_desc: "Pine forest of Eoduunso have often been neglected by our merchants and lords for having not many settlemenents to influence and goods to exchange. However the rumors of rivers flowing with copper and silver caught the attention of some of our more ambitious leaders. Many of them plan expeditions up the river and even deep into the northern sea."
