eoduunso goods + prov names

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -971,7 +971,7 @@
  PROV970: "970"
  PROV971: "Lieref"
  PROV972: "972"
- PROV973: "973"
+ PROV973: "Sata"
  PROV974: "Mamnadar" #forbidden
  PROV975: "Saydan"
  PROV976: "Kesepar"
@@ -2545,7 +2545,7 @@
  PROV2544: "Yuuma"
  PROV2545: "Eastern Panpallpan Sea"
  PROV2546: "Kibipal"
- PROV2547: "2547"
+ PROV2547: "Uweottan Coast"
  PROV2548: "Attapher"
  PROV2549: "Huacu"
  PROV2550: "Sha'ia"
@@ -2618,7 +2618,7 @@
  PROV2617: "2617"
  PROV2618: "2618"
  PROV2619: "2619"
- PROV2620: "2620"
+ PROV2620: "Eolinbom Bay"
  PROV2621: "2621"
  PROV2622: "2622"
  PROV2623: "2623"
@@ -3100,7 +3100,7 @@
  PROV3099: "Sursurthan"
  PROV3100: "Pantta"
  PROV3101: "Baghsit"
- PROV3102: "3102"
+ PROV3102: "Western Kadapsuo Sea"
  PROV3103: "Kurapuj"
  PROV3104: "Chutya"
  PROV3105: "Jambural"
@@ -3171,7 +3171,7 @@
  PROV3170: "Khekhnar"
  PROV3171: "3171"
  PROV3172: "3172"
- PROV3173: "3173"
+ PROV3173: "Kadapsuo Sea"
  PROV3174: "Tsenkhuvaagdal"
  PROV3175: "Tövtsöl"
  PROV3176: "Ulankhuvaagdal"
@@ -3276,14 +3276,14 @@
  PROV3275: "Holansan"
  PROV3276: "Nalkaisan"
  PROV3277: "3277"
- PROV3278: "3278"
- PROV3279: "3279"
- PROV3280: "3280"
- PROV3281: "3281"
+ PROV3278: "Cheuke"
+ PROV3279: "Imashka"
+ PROV3280: "Iperupi"
+ PROV3281: "Isaiwa"
  PROV3282: "Suiwol"
  PROV3283: "Haendang"
  PROV3284: "Guryedong"
- PROV3285: "3285"
+ PROV3285: "Rangeka"
  PROV3286: "Geumbat"
  PROV3287: "Badagang"
  PROV3288: "Seojong"
@@ -3296,25 +3296,25 @@
  PROV3295: "Eungang"
  PROV3296: "Pagigeum"
  PROV3297: "Keunseong"
- PROV3298: "3298"
- PROV3299: "3299"
- PROV3300: "3300"
- PROV3301: "3301"
- PROV3302: "3302"
+ PROV3298: "Bebetsan"
+ PROV3299: "Hummce"
+ PROV3300: "Oshunkshi"
+ PROV3301: "Shirata"
+ PROV3302: "Sapaa"
  PROV3303: "3303"
- PROV3304: "3304"
- PROV3305: "3305"
- PROV3306: "3306"
- PROV3307: "3307"
- PROV3308: "3308"
- PROV3309: "3309"
- PROV3310: "3310"
- PROV3311: "3311"
+ PROV3304: "Nenara"
+ PROV3305: "Sarado"
+ PROV3306: "Shimoigara"
+ PROV3307: "Uweotta"
+ PROV3308: "Enaretoke"
+ PROV3309: "Yakka"
+ PROV3310: "Kekinga"
+ PROV3311: "Petreke"
  PROV3312: "3312"
- PROV3313: "3313"
- PROV3314: "3314"
- PROV3315: "3315"
- PROV3316: "3316"
+ PROV3313: "Retarshpa"
+ PROV3314: "Seshme"
+ PROV3315: "Ruekoki"
+ PROV3316: "Repunkata"
  PROV3317: "Quangao"
  PROV3318: "Desheng"
  PROV3319: "Qudong"
