--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -859,6 +859,8 @@
  haluda_phara_area: "Haluda Phara"
  jampyari_area: "Jampyari"
  putnala_area: "Putnala"
+ myawra_area: "Myawra"
+ tainkyuat_area: "Tainkyuat"
 
  mahjipang_area: "Mahjipang"
  glechao_area: "Glechao"
