--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -166,7 +166,7 @@
  furmaric_islands_area: "Furmaric Islands"
  uzkolia_area: "Uzkolia"
  akmens_krasts_area: "Akmens Krasts"
- hercogaosta_area: "Hercogaosta"
+ grumsta_area: "Grumsta"
  aligeland_area: "Aligeland"
  soteva_pakranteje_area: "Soteva Pakranteje"
  didysis_mutova_area: "Didysis Mutova"
