--- a/localisation/prov_names_adj_l_english.yml
+++ b/localisation/prov_names_adj_l_english.yml
@@ -325,7 +325,7 @@
  PROV_ADJ324: "Kõla"
  PROV_ADJ325: "Määdnu"
  PROV_ADJ326: "kaevandus"
- PROV_ADJ327: "Mutovian Bay"
+ PROV_ADJ327: "Mutovan Sea"
  PROV_ADJ328: "Pühakoda"
  PROV_ADJ329: "Pruumets"
  PROV_ADJ330: "Musornaq"
