--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -325,7 +325,7 @@
  PROV324: "Väinakallas"
  PROV325: "Aletaguste"
  PROV326: "Kaevumaa"
- PROV327: "Mutovian Bay"
+ PROV327: "Mutovan Sea"
  PROV328: "Hiidemaa"
  PROV329: "Pruunmetsa"
  PROV330: "Musornaq"
