--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -736,11 +736,14 @@
  desc_TD_SIS_Establish_Permanent_Diet: "The Tetrarchy has established a permanent diet which will periodically convene in the same location."
  TD_SIS_Decay_Unlock_Call_Imperial_diet_decision_tt: "Unlocks \"§PHold Imperial Diet§!\" decision"
  decision_hold_diet_sis_title: "Hold Imperial Diet"
+ decision_hold_diet_sis_desc: "Hold the imperial diet in order to resolve critical to the health of the empire issues."
  TD_SIS_Holding_the_diet: "Holding the Imperial Diet"
+ desc_TD_SIS_Holding_the_diet: "The Empire is currently in the process of discussing various important matters."
  TD_SIS_Decay_Unlock_Saelian_Council_decision_tt: "Unlocks \"§PEstablish Saelian Council§!\" decision"
  decision_sis_decay_establish_saelian_council_title: "Establish Saelian Council"
  decision_sis_decay_establish_saelian_council_desc: "Saelian council will help us restore the glory of our empire and bring a fresh wind to the ancient empire."
  TD_SIS_Establish_Saelian_Council: "Established Saelian Council"
+ desc_TD_SIS_Establish_Saelian_Council: "The Saelian Council now holds an actual power in the empire, allowing it to better support it."
  TD_SIS_Decay_Block_Pacification_Path_tt: "§RWe will forever lose ability to pacify empire by force§!"
  
  disaster_sis_decay.101.t: "Bohemia's dreams of Emperorship Shattered."
