--- a/localisation/TD_peasants_l_english.yml
+++ b/localisation/TD_peasants_l_english.yml
@@ -45,8 +45,9 @@
  estate_nobles_protect_rural_nobility_desc: "We will guarantee to our nobility that their rights will be kept exclusively for them and we won't give them to peasants."
 
  estate_peasants_rural_development_effort: "Rural Development Effort"
- estate_peasants_rural_development_effort_desc: "Rations and Food are things that are necessary for existence of our state, without them we wouldn't be able to maintain our armies and population. By giving peasants better privileges for farming we can boost its production."
+ estate_peasants_rural_development_effort_desc: "Steady supply of grain is necessary for existence of our state and without it we wouldn't be able to maintain our army and population. By giving peasants better farming privileges we can boost the production of food in the nation."
  estate_peasants_rural_development: "Rural Development Effort"
+ desc_estate_peasants_rural_development: "Growth of the province is supported by the state, making it overall more effective."
  estate_peasants_rural_development_effort_effect_tooltip: "Every owned province with Livestock or Grain Trade Goods gains:\nLocal Development Cost: §G-5.0%§!\nConstruction Time: §G-10.0%§!"
 
  estate_peasants_monopoly_of_livestock: "Monopoly on Livestock"
