--- a/localisation/TD_01_flavour_hestan_l_english.yml
+++ b/localisation/TD_01_flavour_hestan_l_english.yml
@@ -172,7 +172,9 @@
  kath_desc: "Kath is a lower deity of fertility, patron of farmers and herders."
 
  follows_higher_deity: "Follows Higher Deity"
+ desc_follows_higher_deity: "Our ruler prays to one of the deities of the higher order."
  follows_lower_deity: "Follows Lower Deity"
+ desc_follows_lower_deity: "Our ruler prays to one of the deities of the lower order."
 
  kakatachian_empire_reform: "Kakatachian Empire"
  kakatachian_empire_reform_desc: "The unified kingdom of Fadi and Rasus is also known as Kakatachia, the first successful unitary state controlling the entire region."
