--- a/localisation/TD_01_flavour_novoregno_l_english.yml
+++ b/localisation/TD_01_flavour_novoregno_l_english.yml
@@ -5,6 +5,7 @@
  novoregno.1.b: "Maybe he's right after all..."
  novoregno.1.b_tt: "Every owned province which is either §YSaelian§! of §YYaltazim§! will get:"
  TD_eager_conversion: "Eager Conversion"
+ desc_TD_eager_conversion: "This province is much more willing to convert than the rest of the populace."
  agellidian_center_of_reformation: "Center of Conversion"
 
  organize_local_festivals_aspect: "Organize Local Festivals"
