eneratian event loc

--- a/localisation/TD_01_flavour_eneratian_l_english.yml
+++ b/localisation/TD_01_flavour_eneratian_l_english.yml
@@ -44,43 +44,43 @@
  
  TD_Eneratian_Tolerated_Heresy: "Tolerated Heresy"
  TD_Eneratian_utilize_religious_fervor: "Reignited Religious Fervor"
- TD_Eneratian_Simony_found_out: "Simony found out"
+ TD_Eneratian_Simony_found_out: "Simony discovered"
  TD_Eneratian_opposed_the_church: "Opposed the church Authority"
  TD_Eneratian_fund_inquisition: "Funding the Inquisition"
  
  eneratian.2.t: "Conflict of Bishops"
- eneratian.2.desc: " "
+ eneratian.2.desc: "One of the more radical priests in the nation has recently embraced a new notion on the life of Sal. Many are outraged by his almost heretical views and call for the [Root.Monarch.GetTitle] to somehow deal with this sinful man."
  eneratian.2.a: "We should appease the clergy"
  eneratian.2.b: "But he is right!"
- eneratian.3.t: "Regional rites found heretical"
- eneratian.3.desc: " "
+ eneratian.3.t: "Provincial Heresy"
+ eneratian.3.desc: "It has been recently found that the people of [TD_Eneratian_Heretic_prov.GetName] have a peculiar tradition which dates back to the times before the Saelian Empire reached these lands. Some of our scholars are certain, that these rituals are deeply rooted in pagan traditions and stand in direct conflict with the teachings of our church. What should be done about them?"
  eneratian.3.a: "Condemn the rites"
  eneratian.3.b: "We can let it slide.."
- eneratian.4.t: "Support of Autokefalic Church"
- eneratian.4.desc: " "
+ eneratian.4.t: "Universal Support"
+ eneratian.4.desc: "Only in rare occassions it happens that a ruler is so widely known for being a zealous and pious follower of Sal that even the most influential men in the clergy universally support his actions. They recently reached out to the court in order to help the [Root.Monarch.GetTitle] in any of his righteous missions."
  eneratian.4.a: "Let's utilize the religious fervor"
  eneratian.4.b: "Better relocate focus into administrative matters"
- eneratian.5.t: "Bishop opposes our heretical Alliance"
- eneratian.5.desc: " "
- eneratian.5.a: "Use something to change his mind"
+ eneratian.5.t: "Heretic Pacts"
+ eneratian.5.desc: "Our alliance with [TD_Eneratian_Heretic_Ally.GetName] has sparked a great deal of controversy among our priest. While many accept the need of a more calculated approach to diplomacy, there are some independent thinkers who are aggresively opposing the decision of the state. One of these bishops has recently came out and publicly denounced the alliance."
+ eneratian.5.a: "Convince him otherwise"
  eneratian.5.b: "He is right, we shouldn't ally heretics!"
- eneratian.6.t: "Emperor Reigns in the Church"
- eneratian.6.desc: " "
- eneratian.6.a: "Reorganize the Church"
- eneratian.6.b: "Utilize it to improve our Imperial Legitimacy"
- eneratian.7.t: "Church overpowers the incompetent Emperor"
- eneratian.7.desc: " "
+ eneratian.6.t: "Reign of [Root.Monarch.GetTitle] [Root.Monarch.GetName]"
+ eneratian.6.desc: "Masterfully planned decisions of our [Root.Monarch.GetTitle] have led to many of the bishops and even minor clergy being completely loyal to the emperor, to the point that they are willing to compromise even on their most staunch beliefs. There are plethora of ways we can use this to our advantage."
+ eneratian.6.a: "Placate the Bishops"
+ eneratian.6.b: "Utilize it to increase our Legitimacy as the Emperors"
+ eneratian.7.t: "Clerical Domination"
+ eneratian.7.desc: "Passive nature of the reign of [Root.Monarch.GetTitle] [Root.Monarch.GetName] have led to the most of the clergy in the nation being disloyal and particularist. While there are some loyalist holdouts, It is certain that without taking drastic actions the church might overpower the crown."
  eneratian.7.a: "There's nothing we can do.."
  eneratian.7.b: "Embrace the authority to keep them at bay!"
- eneratian.8.t: "Local bishop asks for help"
- eneratian.8.desc: " "
+ eneratian.8.t: "Local Bishop Requests Help"
+ eneratian.8.desc: "One of our more dedicated bishops has just requested an audience with the [Root.Monarch.GetTitle] in order to gather funds for his new local inquisition, which will help him more effectively bring his people on a way to salvation. However, funding the inquisition in the whole nation might be more expensive, but also more fruitful"
  eneratian.8.a: "Help him out"
- eneratian.8.b: "Let's fund the Inquisition instead"
- eneratian.8.c: "I don't think like i am spending any money"
- eneratian.9.t: "The Autokefalic Church calls for a holy war!"
- eneratian.9.desc: " "
+ eneratian.8.b: "Let's fund the national inquisition instead"
+ eneratian.8.c: "I don't think i like spending my treasury"
+ eneratian.9.t: "Rising Zealotry"
+ eneratian.9.desc: "Living next to our heretic and heathenous neighbors made many of our bishops very eager to show them the one true glory of Sal. In every church and monastery chants of war can be heard, singed by our faithful populace, ready to strike at our enemy at any moment."
  eneratian.9.a: "DEUS VULT!"
- eneratian.9.b: "This alliance is vital to survival of our country, we can't simply turn our backs on them now!"
+ eneratian.9.b: "This alliance is vital to the survival of our country, we can't simply turn our backs on them now!"
 
  empiree_eneratiane_reform: "Empiree Eneratiane"
  empiree_eneratiane_reform_desc: "Following the legacy of the ancient Eneratian Empire, our state has abolished the elective monarchy of the Saelian Empire."
